# satellite_classification

./: Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
notebooks/: cnn_030225.ipynb  evaluate_ResNet_performance_030325.ipynb  sat_class_torch.ipynb  sat_class_torch_ResNet_250225.ipynb  satellite_classification_notebook.ipynb
src/collector/: satellite_images_collector.py
src/processor/: temperature_data_processing.py
src/satellite_classification/: __init__.py  _satellite_classification.py
src/satellite_classification/_tests/: test_module.py
weather stations/: Promedio_Temperatura_2024-01-31_12_00_Int_24.csv
